--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+R_intermediate_files/annotationTable.tsv
+R_intermediate_files/geneIDs.tsv
+R_intermediate_files/Mean_condition_TPM_sig_genes.tsv
+R_intermediate_files/referenceSet.tsv
+R_intermediate_files/TPM_df.tsv
