Now saving collection object as intermediate file

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ R_intermediate_files/geneIDs.tsv
 R_intermediate_files/Mean_condition_TPM_sig_genes.tsv
 R_intermediate_files/referenceSet.tsv
 R_intermediate_files/TPM_df.tsv
+R_intermediate_files/collection.RData
