Started analysing glycan aspects

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ R_intermediate_files/referenceSet.tsv
 R_intermediate_files/TPM_df.tsv
 R_intermediate_files/collection.RData
 R_intermediate_files/network.RData
+/R_intermediate_files
